Allow video upload for authenticated users. Add resource server configuration. Fix Cors configuration for authorization. Add rest tests